--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,16 @@ yarn-error.log
 *.tsbuildinfo
 
 # Environment variables
-
+.env
+.env.local
+.env.production
+.env.staging
 !.env.example
+
+# Sensitive credentials
+src/docs/client_secret_*.json
+*.pem
+*.key
 
 # IDE
 .vscode/
