feat: Add script to create super admin user and validation schemas for authentication and user management
- Implemented createSuperAdmin script for setting up a super admin user in the facility management system.
- Added validation schemas for login, password management, and user creation/updating using Joi.
- Included comprehensive error messages and validation rules for user input.
- Established MongoDB connection handling and graceful shutdown on process termination.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "create-superadmin": "ts-node src/scripts/createSuperAdmin.ts",
+    "create-superadmin:prod": "node dist/scripts/createSuperAdmin.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
